about page done

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
                 <div class="nav-menu">
                     <ul class="m-0 p-0 list-unstyled">
                         <li class="nm-item"><a class="nm-link" href="index.html">Home</a></li>
-                        <li class="nm-item"><a class="nm-link" href="#">About Us</a></li>
+                        <li class="nm-item"><a class="nm-link" href="about-us.html">About Us</a></li>
                         <li class="nm-item"><a class="nm-link" href="">Services</a></li>
                         <li class="nm-item"><a class="nm-link" href="#">Projects</a></li>
                     </ul>
