--- a/header.html
+++ b/header.html
@@ -11,8 +11,8 @@
                     <ul class="m-0 p-0 list-unstyled">
                         <li class="nm-item"><a class="nm-link" href="index.html">Home</a></li>
                         <li class="nm-item"><a class="nm-link" href="about-us.html">About Us</a></li>
-                        <li class="nm-item"><a class="nm-link" href="">Services</a></li>
-                        <li class="nm-item"><a class="nm-link" href="#">Projects</a></li>
+                        <li class="nm-item"><a class="nm-link" href="#">Services</a></li>
+                        <li class="nm-item"><a class="nm-link" href="project.html">Projects</a></li>
                     </ul>
                 </div>
             </div>
