--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-3 my-3 text-end"><a href="#" class="th-btn">contact us</a></div>
+            <div class="col-sm-3 my-3 text-end"><a href="contact-us.html" class="th-btn">contact us</a></div>
         </div>
     </div>
 </div>
