--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Hero Banner Section End -->
 
         <!-- Elevating Brands Section Start -->
-        <section class="elevating-brand">
+        <section class="elevating-brand" id="elevating-brand">
             <div class="container-xxl">
                 <div class="elb-box">
                     <div class="row justify-content-between">
@@ -107,25 +107,25 @@
                                 <div class="row">
                                     <div class="col-6 p-0">
                                         <div class="elb-co-box elb-co-box-1">
-                                            <h1><span class="cout">7</span><span>+</span></h1>
+                                            <h1><span class="cout" data-akhi="7">0</span><span>+</span></h1>
                                             <p> Years of experience</p>
                                         </div>
                                     </div>
                                     <div class="col-6 p-0">
                                         <div class="elb-co-box elb-co-box-2">
-                                            <h1><span class="cout">500</span><span>+</span></h1>
+                                            <h1><span class="cout" data-akhi="500">0</span><span>+</span></h1>
                                             <p>Clients served </p>
                                         </div>
                                     </div>
                                     <div class="col-6 p-0">
                                         <div class="elb-co-box elb-co-box-3">
-                                            <h1><span class="cout">25</span><span>+</span></h1>
+                                            <h1><span class="cout" data-akhi="25">0</span><span>+</span></h1>
                                             <p>Team strength</p>
                                         </div>
                                     </div>
                                     <div class="col-6 p-0">
                                         <div class="elb-co-box elb-co-box-4">
-                                            <h1><span class="cout">2</span><span>+</span></h1>
+                                            <h1><span class="cout" data-akhi="2">0</span><span>+</span></h1>
                                             <p>offices</p>
                                         </div>
                                     </div>
@@ -421,7 +421,7 @@
                 <div class="testimonial-container">
                     <div class="tes-box">
                         <div class="test-head">
-                            <h3>Arts & Life</h3>
+                            <h4>Arts & Life</h4>
                         </div>
                         <div class="test-content">
                             <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
@@ -443,7 +443,7 @@
                     </div>
                     <div class="tes-box">
                         <div class="test-head">
-                            <h3>Dimple Collections</h3>
+                            <h4>Dimple Collections</h4>
                         </div>
                         <div class="test-content">
                             <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
@@ -465,7 +465,7 @@
                     </div>
                     <div class="tes-box">
                         <div class="test-head">
-                            <h3>VAHE WIBES</h3>
+                            <h4>VAHE WIBES</h4>
                         </div>
                         <div class="test-content">
                             <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
@@ -487,7 +487,7 @@
                     </div>
                     <div class="tes-box">
                         <div class="test-head">
-                            <h3>TRAVEL BUREAU</h3>
+                            <h4>TRAVEL BUREAU</h4>
                         </div>
                         <div class="test-content">
                             <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
@@ -496,7 +496,7 @@
                                 <div class="test-h">
                                     <h5 class="m-0">The rugs cafe</h5>
                                 </div>
-                                <div class="test-q"><img src="image/q-right.png" alt=""></div>
+                                <di v class="test-q"><img src="image/q-right.png" alt=""></di>
                             </div>
                             <div class="test-p">
                                 <p class="m-0">The team is very nice & on point, and understands swiftly what I want.
@@ -509,7 +509,7 @@
                     </div>
                     <div class="tes-box open">
                         <div class="test-head">
-                            <h3>TRAVEL BUREAU</h3>
+                            <h4>TRAVEL BUREAU</h4>
                         </div>
                         <div class="test-content">
                             <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
@@ -540,17 +540,19 @@
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-md-6 d-flex align-items-end">
-                     <div class="">
-                        <h2>Work With Us</h2>
-                        <p>An integrated marketing agency for businesses of any size, handling all sorts of development, creative, and marketing needs from start to end.</p>
-                     </div>
+                        <div class="">
+                            <h2>Work With Us</h2>
+                            <p>An integrated marketing agency for businesses of any size, handling all sorts of
+                                development, creative, and marketing needs from start to end.</p>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="wow-box">
                                     <h2>One-off Project</h2>
-                                    <p>Delivery of a branding project, CGI project, marketing campaign, and brand strategy</p>
+                                    <p>Delivery of a branding project, CGI project, marketing campaign, and brand
+                                        strategy</p>
                                     <a href="#" class="th-arrow-btn">
                                         <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                         <span class="btn-text"><b>Book a 30 mins call</b></span>
@@ -560,7 +562,8 @@
                             <div class="col-sm-6">
                                 <div class="wow-box">
                                     <h2>Retained Support</h2>
-                                    <p>Instant consultations, monthly retained activities, social media management, reporting, and more</p>
+                                    <p>Instant consultations, monthly retained activities, social media management,
+                                        reporting, and more</p>
                                     <a href="#" class="th-arrow-btn">
                                         <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                         <span class="btn-text"><b>Book a 30 mins call</b></span>
@@ -574,11 +577,6 @@
             </div>
         </section>
         <!-- Work With Us Section End -->
-
-
-
-
-
 
 
     </main>
@@ -613,6 +611,39 @@
             $('.tes-box').removeClass('open').addClass('close');
             $(this).addClass('open').removeClass('close');
         })
+    </script>
+    <script>
+        // Counter code
+        var hasCodeRun = false;
+
+        $(window).scroll(function () {
+            var scrollPos = $(window).scrollTop();
+            var sectionOffsetTop = $('#elevating-brand').offset().top;
+
+            if ((scrollPos + 200) >= sectionOffsetTop && !hasCodeRun) {
+                startCounter();
+                hasCodeRun = true;
+            }
+        });
+
+        function startCounter() {
+            $('.cout').each(function () {
+                var target = parseInt($(this).attr('data-akhi'));
+                var $element = $(this);
+
+                $({ countNum: 0 }).animate({ countNum: target }, {
+                    duration: 3000,
+                    easing: 'linear',
+                    step: function () {
+                        $element.text(Math.floor(this.countNum));
+                    },
+                    complete: function () {
+                        $element.text(target);
+                    }
+                });
+            });
+        }
+
     </script>
     <script>
         $(".brand-slider").slick({
