--- a/contact-us.html
+++ b/contact-us.html
@@ -230,9 +230,13 @@
             $('.tes-box').removeClass('open').addClass('close');
             $(this).addClass('open').removeClass('close');
         })
+        $('.cons-b').click(function(){
+            $('.cons-b').removeClass('active');    
+            $(this).addClass('active');    
+        })
     </script>
     <script>
-        // Counter code
+   /*      // Counter code
         var hasCodeRun = false;
 
         $(window).scroll(function () {
@@ -262,7 +266,7 @@
                 });
             });
         }
-
+ */
     </script>
     <script>
         $(".brand-slider").slick({
