--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
                         <p>
                             <a href="mailto:hello@mediax.co.in">hello@mediax.co.in</a> 
                             <br>
-                            <a href="tel:9760273375">+91 9760273375</a>
+                            <a href="tel:9760273375">+919760273375</a>
                         </p>
                     </div>
                 </div>
