--- a/careers.html
+++ b/careers.html
@@ -41,121 +41,68 @@
 
     <!-- Main Section Start -->
     <main>
+
         <!-- Career Hero Section Start -->
         <section class="career-hero">
-            <iframe id="career-video" src="https://www.youtube.com/embed/HtdOd_rYOes?si=hGj63NATdVX2fuWb"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="career-video-wrapper">
-                <i class="fas fa-play"></i>
-            </div>
-        </section>
-        <!-- Career Hero Section End -->
-
-
-        <!-- Career Hero Text Section Start -->
-        <section class="career-hero-text">
-            <div class="container-xxl">
-                <div class="row justify-content-center">
-                    <div class="col-sm-10 col-md-8 col-lg-7">
-                        <h2>We’re not just like any other agency.</h2>
-                        <p> We're here for clients who dream big and aren't afraid to take risks. We love to shake
-                            things up and make a real impact. We're here to help people with big ideas who aren't afraid
-                            to try new things. Our team is dedicated to crafting innovative strategies that stand out
-                            and connect with people. Join us in shaping the future of marketing and making your mark
-                            with confidence.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Career Hero Text Section End -->
-        <!-- Career Team Section Start -->
-        <section class="career-team">
-            <div class="container-xxl">
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-md-6">
-                        <h2>We are proud of the work we put out there.</h2>
-                        <p>We’re a dynamic group of thinkers who challenge convention and embrace innovation. We're not
-                            interested in simply going through the motions or sticking to the familiar. Instead, we
-                            value those with the courage to think differently and the creativity to approach challenges
-                            from new angles.</p>
-                    </div>
-                    <div class="col-md-6"><img src="image/career-team.png" alt="" class="w-100"></div>
-                </div>
-            </div>
-        </section>
-        <!-- Career Team Section End -->
-        <!-- Career Vacancy Section Start -->
-        <section class="career-vacancy">
-            <div class="container-xxl">
-                <div class="row justify-content-between">
-                    <div class="col-md-5">
-                        <h2>Careers & Internship</h2>
-                        <p>
-                            Join our team at MediaX. We thrive on collaboration and problem-solving, and we're always
-                            looking for new talent. Can't find what you're looking for? Share your portfolio with us for
-                            future opportunities.
-                        </p>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="cv-right">
-                            <h5>CURRENT AVAILABLE JOB ROLES</h5>
-                            <div class="cv-tab-box">
-                                <div class="cv-tab">
-                                    <div class="cvt-l">
-                                        <i class="fal fa-spider-web"></i>
-                                        <p>Office Administrator (P/T)</p>
-                                    </div>
-                                    <div class="cvt-r"><i class="fas fa-chevron-right"></i></div>
-                                </div>
-                                <div class="cv-tab">
-                                    <div class="cvt-l">
-                                        <i class="fal fa-spider-web"></i>
-                                        <p>Office Administrator (P/T)</p>
-                                    </div>
-                                    <div class="cvt-r"><i class="fas fa-chevron-right"></i></div>
-                                </div>
-                                <div class="cv-tab">
-                                    <div class="cvt-l">
-                                        <i class="fal fa-spider-web"></i>
-                                        <p>Office Administrator (P/T)</p>
-                                    </div>
-                                    <div class="cvt-r"><i class="fas fa-chevron-right"></i></div>
-                                </div>
-                                <!-- <div class="cv-tab">
-                                    <div class="cvt-l">
-                                        <i class="fal fa-spider-web"></i> <p>Office Administrator (P/T)</p>
-                                    </div>
-                                    <div class="cvt-r"><i class="fas fa-chevron-right"></i></div>
-                                </div> -->
-                            </div>
-                            <div class="cv-btn">
-                                <a href="#" class="th-btn">
-                                    Join Our Talent Pool
-                                    <i class="fas fa-chevron-down"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Career Vacancy Section End -->
-
-        <!-- Warning Section Start -->
-            <section class="warning">
-                <div class="contaienr-xxl">
-                    <div class="row justify-content-center">
-                        <div class="col-sm-10 col-md-8">
-                            <h2>Warning!</h2>
-                            <p> Beware of fraudulent job offers impersonating MediaX. Only trust opportunities from our official careers site. Report any suspicious activity to <a href="mailto:careers@mediax.co.in">careers@mediax.co.in</a>. We are not liable for unauthorized recruitment activities and urge you to remain vigilant.
+            <div class="crh-img"><img src="image/careers.jpg" alt="" class="w-100"></div>
+            <div class="crh-text">
+                <div class="container-xxl">
+                    <div class="row justify-content-center text-center">
+                        <div class="col-xl-6 col-md-8 col-10">
+                            <h2>We’re not just like any other agency!</h2>
+                            <p>Our team is dedicated to crafting innovative strategies that stand out and connect with
+                                people. Join us in shaping the future of marketing and making your mark with confidence.
                             </p>
                         </div>
                     </div>
                 </div>
-            </section>
-        <!-- Warning Section End -->
+            </div>
+        </section>
+        <!-- Career Hero Section End -->
+
+        <!-- Workplace Section Start -->
+        <section class="workplace">
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col-md-8 col-lg-6 mb-4">
+                        <h2>We have Three workplace mantras</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <div class="wb-num">01.</div>
+                            <div class="wb-title">The Beauty of Eloquence</div>
+                            <div class="wb-img"><img src="image/work-1.png" alt="" class="w-100"></div>
+                            <div class="wb-text">
+                                <p>We master ideas. And pictures. And words. We believe communication is a craft, and if something is worth saying, it's worth saying well. (Because an idea without the right words is like good intentions without action.)</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <div class="wb-num">02.</div>
+                            <div class="wb-title">Family Is Everything</div>
+                            <div class="wb-img"><img src="image/work-2.png" alt="" class="w-100"></div>
+                            <div class="wb-text">
+                                <p>It starts with those closest to us and extends to our MediaX family, our clients, our community, and the family of all living things. Family is the most important thing. It is, indeed, everything.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <div class="wb-num">03.</div>
+                            <div class="wb-title">From Wonder? To Wonder!</div>
+                            <div class="wb-img"><img src="image/work-3.png" alt="" class="w-100"></div>
+                            <div class="wb-text">
+                                <p>Curiosity, innocence, aliveness. Some would say these are childlike traits. We say they are the key ingredients for mature learning and discovery, It's this magic that changes the minds of people who can change the world.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Workplace Section End -->
 
 
     </main>
@@ -188,12 +135,6 @@
 
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
-    <script>
-        $('.career-video-wrapper .fas').click(function () {
-            $(".career-video-wrapper").addClass("d-none");
-        })
-
-    </script>
 </body>
 
 </html>
