--- a/careers.html
+++ b/careers.html
@@ -75,7 +75,9 @@
                             <div class="wb-title">The Beauty of Eloquence</div>
                             <div class="wb-img"><img src="image/work-1.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>We master ideas. And pictures. And words. We believe communication is a craft, and if something is worth saying, it's worth saying well. (Because an idea without the right words is like good intentions without action.)</p>
+                                <p>We master ideas. And pictures. And words. We believe communication is a craft, and if
+                                    something is worth saying, it's worth saying well. (Because an idea without the
+                                    right words is like good intentions without action.)</p>
                             </div>
                         </div>
                     </div>
@@ -85,7 +87,9 @@
                             <div class="wb-title">Family Is Everything</div>
                             <div class="wb-img"><img src="image/work-2.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>It starts with those closest to us and extends to our MediaX family, our clients, our community, and the family of all living things. Family is the most important thing. It is, indeed, everything.</p>
+                                <p>It starts with those closest to us and extends to our MediaX family, our clients, our
+                                    community, and the family of all living things. Family is the most important thing.
+                                    It is, indeed, everything.</p>
                             </div>
                         </div>
                     </div>
@@ -95,7 +99,9 @@
                             <div class="wb-title">From Wonder? To Wonder!</div>
                             <div class="wb-img"><img src="image/work-3.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>Curiosity, innocence, aliveness. Some would say these are childlike traits. We say they are the key ingredients for mature learning and discovery, It's this magic that changes the minds of people who can change the world.</p>
+                                <p>Curiosity, innocence, aliveness. Some would say these are childlike traits. We say
+                                    they are the key ingredients for mature learning and discovery, It's this magic that
+                                    changes the minds of people who can change the world.</p>
                             </div>
                         </div>
                     </div>
@@ -104,6 +110,285 @@
         </section>
         <!-- Workplace Section End -->
 
+
+        <!-- Our Expert Section Start -->
+        <section class="our-experts">
+            <div class="container-xxl position-relative">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h2 class="text-end">What our <div class="d-none d-sm-block"></div>
+                            xperts Think</h2>
+                    </div>
+                </div>
+                <div class="ouex-slider">
+                    <div class="ouex-box">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="muex-text">
+                                    <h1>“</h1>
+                                    <h3>This company is full of bright minds with even brighter personalities. The
+                                        atmosphere is contagious.</h3>
+                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                        genuine focus on the personal growth and happiness of each and every employee
+                                        under the MediaX umbrella.</p>
+
+                                    <h5>- Sadaf Khan</h5>
+                                    <h6>(Sr. UI/UX Designer)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ouex-box">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="muex-text">
+                                    <h1>“</h1>
+                                    <h3>This company is full of bright minds with even brighter personalities. The
+                                        atmosphere is contagious.</h3>
+                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                        genuine focus on the personal growth and happiness of each and every employee
+                                        under the MediaX umbrella.</p>
+
+                                    <h5>- Sadaf Khan</h5>
+                                    <h6>(Sr. UI/UX Designer)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ouex-box">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="muex-text">
+                                    <h1>“</h1>
+                                    <h3>This company is full of bright minds with even brighter personalities. The
+                                        atmosphere is contagious.</h3>
+                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                        genuine focus on the personal growth and happiness of each and every employee
+                                        under the MediaX umbrella.</p>
+
+                                    <h5>- Sadaf Khan</h5>
+                                    <h6>(Sr. UI/UX Designer)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ouex-box">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="muex-text">
+                                    <h1>“</h1>
+                                    <h3>This company is full of bright minds with even brighter personalities. The
+                                        atmosphere is contagious.</h3>
+                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                        genuine focus on the personal growth and happiness of each and every employee
+                                        under the MediaX umbrella.</p>
+
+                                    <h5>- Sadaf Khan</h5>
+                                    <h6>(Sr. UI/UX Designer)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ouex-box">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="muex-text">
+                                    <h1>“</h1>
+                                    <h3>This company is full of bright minds with even brighter personalities. The
+                                        atmosphere is contagious.</h3>
+                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                        genuine focus on the personal growth and happiness of each and every employee
+                                        under the MediaX umbrella.</p>
+
+                                    <h5>- Sadaf Khan</h5>
+                                    <h6>(Sr. UI/UX Designer)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ouex-arrow">
+                    <div class="ouex-ar" id="ouex-left"><img src="image/arrow-left.png" alt="" class="w-100"></div>
+                    <div class="ouex-ar" id="ouex-right"><img src="image/arrow-right.png" alt="" class="w-100"></div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Expert Section End -->
+
+
+        <!-- We Are Looking Section Start -->
+        <section class="we-are-looking">
+            <div class="container-xxl">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-md-6">
+                        <div class="wal-text">
+                            <h2>We’re looking for thinkers who think differently</h2>
+                            <p>If you’d like to add your light to our House, see if our present needs match your unique talents. Check out <a href="#openings">Current Openings.</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="wal-img"><img src="image/we-are-looking.png" alt="" class="w-100"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- We Are Looking Section End -->
+
+        <!-- Openings Section Start -->
+        <section class="opening">
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col-12 mb-4"><h2 class="mb-r">Openings</h2></div>
+                </div>
+                <div class="opening-head">
+                    <div class="row justify-content-between">
+                        <div class="col-3">
+                            <h5>Position</h5>
+                        </div>
+                        <div class="col-3 d-none d-md-block">
+                            <h5>Location</h5>
+                        </div>
+                        <div class="col-3 d-none d-md-block">
+                            <h5>Type</h5>
+                        </div>
+                        <div class="col-2 d-none d-md-block">
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="opening-container">
+                    <div class="opening-box">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-md-3 order-md-1">
+                                <p class="mb-2 mb-md-0">Delhi/Agra</p>
+                            </div>
+                            <div class="col-md-3 order-md-0">
+                                <h4>
+                                    Human Resource Executive
+                                </h4>
+                            </div>
+                            <div class="col-6 col-md-3 order-md-2">
+                                <p class="mb-0">Full Time</p>
+                            </div>
+                            <div class="col-6 col-md-2 order-md-3">
+                                <a href="#" class="th-arrow-btn">
+                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
+                                    <span class="btn-text">Apply</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="opening-box">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-md-3 order-md-1">
+                                <p class="mb-2 mb-md-0">Delhi/Agra</p>
+                            </div>
+                            <div class="col-md-3 order-md-0">
+                                <h4>
+                                    Account Executive
+                                </h4>
+                            </div>
+                            <div class="col-6 col-md-3 order-md-2">
+                                <p class="mb-0">Full Time</p>
+                            </div>
+                            <div class="col-6 col-md-2 order-md-3">
+                                <a href="#" class="th-arrow-btn">
+                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
+                                    <span class="btn-text">Apply</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="opening-box">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-md-3 order-md-1">
+                                <p class="mb-2 mb-md-0">Agra</p>
+                            </div>
+                            <div class="col-md-3 order-md-0">
+                                <h4>
+                                    Brand Strategist
+                                </h4>
+                            </div>
+                            <div class="col-6 col-md-3 order-md-2">
+                                <p class="mb-0">Full Time</p>
+                            </div>
+                            <div class="col-6 col-md-2 order-md-3">
+                                <a href="#" class="th-arrow-btn">
+                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
+                                    <span class="btn-text">Apply</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="opening-box">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-md-3 order-md-1">
+                                <p class="mb-2 mb-md-0">Delhi/Agra</p>
+                            </div>
+                            <div class="col-md-3 order-md-0">
+                                <h4>
+                                    Copywriter
+                                </h4>
+                            </div>
+                            <div class="col-6 col-md-3 order-md-2">
+                                <p class="mb-0">Full Time</p>
+                            </div>
+                            <div class="col-6 col-md-2 order-md-3">
+                                <a href="#" class="th-arrow-btn">
+                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
+                                    <span class="btn-text">Apply</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Openings Section End -->
+
+
+
+        <!-- Warning Section Start -->
+        <section class="warning">
+            <div class="container-xxl p-0">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="war-box">
+                            <div class="row align-items-center">
+                                <div class="col-lg-4 p-0 "><div class="war-title text-center">WARNING!</div></div>
+                                <div class="col-lg-8 p-0 mt-3 mt-lg-0"><div class="war-text">Job seekers, beware of scams! Official MediaX recruitment communication will only come from @mediax.co.in emails. Visit our website for job listings and be cautious with personal info. Legitimate interviews via Microsoft Teams or phone. Offers mainly through Smart Recruiters via DocuSign. If in doubt, contact our IT department at [<a href="mailto:IT_Department@mediax.co.in">IT_Department@mediax.co.in</a> ]. Stay safe!</div></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-end align-items-end">
+                        <div class="social-box">
+                            <h5 class="mb-3">Connect</h5>
+                            <ul class="m-0 p-0 d-flex gap-3">
+                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                                <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Warning Section End -->
 
     </main>
     <!-- Main Section End -->
@@ -135,6 +420,21 @@
 
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
+    <script>
+
+        $('.ouex-slider').slick({
+            dots: false,
+            infinite: true,
+            autoplay: true,
+            autoplayspeed: 300,
+        });
+        $('#ouex-left').click(function () {
+            $('.ouex-slider').slick('slickPrev');
+        })
+        $('#ouex-right').click(function () {
+            $('.ouex-slider').slick('slickNext');
+        })
+    </script>
 </body>
 
 </html>
