--- a/careers.html
+++ b/careers.html
@@ -279,6 +279,27 @@
                             </div>
                             <div class="col-md-3 order-md-0">
                                 <h4>
+                                    Copywriter
+                                </h4>
+                            </div>
+                            <div class="col-6 col-md-3 order-md-2">
+                                <p class="mb-0">Full Time</p>
+                            </div>
+                            <div class="col-6 col-md-2 order-md-3">
+                                <a href="job-description.html" class="th-arrow-btn">
+                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
+                                    <span class="btn-text">Apply</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="opening-box">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-md-3 order-md-1">
+                                <p class="mb-2 mb-md-0">Delhi/Agra</p>
+                            </div>
+                            <div class="col-md-3 order-md-0">
+                                <h4>
                                     Human Resource Executive
                                 </h4>
                             </div>
@@ -322,27 +343,6 @@
                             <div class="col-md-3 order-md-0">
                                 <h4>
                                     Brand Strategist
-                                </h4>
-                            </div>
-                            <div class="col-6 col-md-3 order-md-2">
-                                <p class="mb-0">Full Time</p>
-                            </div>
-                            <div class="col-6 col-md-2 order-md-3">
-                                <a href="#" class="th-arrow-btn">
-                                    <span class="btn-arrow"><img src="image/black-arrow.png" alt=""></span>
-                                    <span class="btn-text">Apply</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="opening-box">
-                        <div class="row align-items-center justify-content-between">
-                            <div class="col-md-3 order-md-1">
-                                <p class="mb-2 mb-md-0">Delhi/Agra</p>
-                            </div>
-                            <div class="col-md-3 order-md-0">
-                                <h4>
-                                    Copywriter
                                 </h4>
                             </div>
                             <div class="col-6 col-md-3 order-md-2">
