service and Sub service page

--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
                     <ul class="m-0 p-0 list-unstyled">
                         <li class="nm-item"><a class="nm-link" href="index.html">Home</a></li>
                         <li class="nm-item"><a class="nm-link" href="about-us.html">About Us</a></li>
-                        <li class="nm-item"><a class="nm-link" href="#">Services</a></li>
+                        <li class="nm-item"><a class="nm-link" href="service.html">Services</a></li>
                         <li class="nm-item"><a class="nm-link" href="project.html">Projects</a></li>
                     </ul>
                 </div>
